added new maths notes pages

--- a/notes/notes_topics/MathematicsForD&T.html
+++ b/notes/notes_topics/MathematicsForD&T.html
@@ -81,7 +81,55 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths_worked_examples.jpg);  background-size: cover; background-position: center center;"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\maths_notes.html">Worked Examples</a>
+                            <a href="notes_pages\maths_arithmetic.html">Arithmetic</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-ratios.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="notes_pages\maths_ratios.html">Ratios</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-sa-vol.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="notes_pages\maths_surface_area_and_volume.html">Surface Area and Volume</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-trig.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="notes_pages\maths_trigonometry.html">Trigonometry</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-graphs.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="notes_pages\maths_graphs_and_charts.html">Graphs and Charts</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-coord_geo.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="notes_pages\maths_coordinates_and_geometry.html">Coordinates and Geometry</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-stats.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="notes_pages\maths_statistics.html">Statistics</a>
                         </div>
                     </div>
                 </div>
