--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -86,6 +86,15 @@
                     </div>
                 </div>
 
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Mathematics for Design & Technology</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
 
