--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -90,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Mathematics for Design & Technology</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Ratio</a>
                         </div>
                     </div>
                 </div>
