--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -81,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Mathematics for Design & Technology</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Number, percentages, and percentiles</a>
                         </div>
                     </div>
                 </div>
@@ -91,6 +91,51 @@
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Ratio</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Surface area / Volume</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Trigonometry</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Graphs and charts</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Coordinates and geometry</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Statistics</a>
                         </div>
                     </div>
                 </div>
