--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-ratios.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Ratio</a>
