--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-sa-vol.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Surface area / Volume</a>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-trig.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Trigonometry</a>
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-stats.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Statistics</a>
