--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -78,7 +78,7 @@
              <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths_worked_examples.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Number, percentages, and percentiles</a>
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-coord_geo.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Graphs and charts</a>
