--- a/notes/notes_topics/notes_pages/maths_arithmetic.html
+++ b/notes/notes_topics/notes_pages/maths_arithmetic.html
@@ -76,7 +76,7 @@
 
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(../../../images/maths_worked_examples.jpg)" title="maths background">
-                <h1 style="color:white"><u><b>Arithmetic</b></u></h1>
+                <h1 style="color:white"><u><b>Number, percentages, and percentiles</b></u></h1>
             </div>
 
             <div class="notes-content">
