--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -81,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths_worked_examples.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Number, percentages, and percentiles</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Number_Q&A.pdf">Number, percentages, and percentiles</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-ratios.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Ratio</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Ratio_Q&A.pdf">Ratio</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-sa-vol.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Surface area / Volume</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_SA&Volume_Q&A.pdf">Surface area / Volume</a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-trig.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Trigonometry</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Trig_Q&A.pdf">Trigonometry</a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-coord_geo.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Graphs and charts</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Graphs&Charts_Q&A.pdf">Graphs and charts</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Coordinates and geometry</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Coords&Geometry_Q&A.pdf">Coordinates and geometry</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-stats.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\Q&A\maths_exercises\Mathematics_for_dt_Q&A.pdf">Statistics</a>
+                            <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Stats_Q&A.pdf">Statistics</a>
                         </div>
                     </div>
                 </div>
