--- a/notes/notes_topics/MathematicsForD&T.html
+++ b/notes/notes_topics/MathematicsForD&T.html
@@ -81,7 +81,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths_worked_examples.jpg);  background-size: cover; background-position: center center;"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\maths_arithmetic.html">Arithmetic</a>
+                            <a href="notes_pages\maths_arithmetic.html">Number, percentages, and percentiles</a>
                         </div>
                     </div>
                 </div>
