--- a/notes/notes_topics/notes_pages/modern_materials_notes.html
+++ b/notes/notes_topics/notes_pages/modern_materials_notes.html
@@ -286,7 +286,7 @@
 
                 
 
-                <h3><b><u>Polymers:</b></u></h3>
+                <h3><b><u>Polymorph:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
