--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -91,6 +91,17 @@
                 </div>
 
                 <div class="notes-content-subheader">
+                    <h2><hr>General comparisons of Hardwoods and Softwoods<hr></h2>
+                </div>
+
+                <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Hardwoods and Softwoods:</h3>
+                <ul style="font-size: medium;">
+                    <li>Hardwoods tend to be more expensive due to the longer time to grow to maturity</li>
+                    <li>Hardwoods tend to be denser due to slow growth times, this makes them more durable, stronger, harder and tougher than softwoods</li>
+                    <li>Hardwoods tend to be darker than softwoods</li>
+                </ul>
+                
+                <div class="notes-content-subheader">
                     <h2><hr>Hardwoods<hr></h2>
                 </div>
 
@@ -328,6 +339,21 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Furniture, Construction, Exterior furniture, Veneers<br><br><br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>General comparisons of Natural timbers and Manmade timbers<hr></h2>
+                </div>
+
+                <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Natural timbers and Manmade timbers:</h3>
+                <ul style="font-size: medium;">
+                    <li>Manmade boards are not limited by the size of the tree, they can be created in any size, shape or thickness</li>
+                    <li>Manmade boards are often covered in a wood veneer for greater strength, durability and for aesthetics</li>
+                    <li>Manmade boards are harder to recycle due to the adhesives in them</li>
+                    <li>Manmade boards tend to be cheaper than natural timbers due to lower quality wood</li>
+                    <li>Manmade boards don't have a grain (except Plywood) which makes them stable in all directions and easier to machine</li>
+                    <li>Manmade boards are more readily available</li>
+                    <li>Manmade boards are made from recycled timber so they are more sustainable</li>
+                </ul>
 
                 <div class="notes-content-subheader">
                     <h2><hr>Manufactured Boards<hr></h2>
