--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -94,11 +94,17 @@
                     <h2><hr>General comparisons of Hardwoods and Softwoods<hr></h2>
                 </div>
 
+                <style>
+                    .custom-highlight {
+                      background-color: rgb(173, 230, 190); /* Change this to the desired color */
+                    }
+                  </style>
+
                 <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Hardwoods and Softwoods:</h3>
                 <ul style="font-size: medium;">
-                    <li>Hardwoods tend to be more expensive due to the longer time to grow to maturity</li>
-                    <li>Hardwoods tend to be denser due to slow growth times, this makes them more durable, stronger, harder and tougher than softwoods</li>
-                    <li>Hardwoods tend to be darker than softwoods</li>
+                    <li><b>Hardwoods</b> tend to be <span class="custom-highlight">more expensive</span> due to the longer time to grow to maturity</li>
+                    <li><b>Hardwoods</b> tend to be <span class="custom-highlight">denser</span> due to slow growth times, this makes them more durable, stronger, harder and tougher than softwoods</li>
+                    <li><b>Hardwoods</b> tend to be <span class="custom-highlight">darker</span> than softwoods</li>
                 </ul>
                 
                 <div class="notes-content-subheader">
@@ -346,13 +352,13 @@
 
                 <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Natural timbers and Manmade timbers:</h3>
                 <ul style="font-size: medium;">
-                    <li>Manmade boards are not limited by the size of the tree, they can be created in any size, shape or thickness</li>
-                    <li>Manmade boards are often covered in a wood veneer for greater strength, durability and for aesthetics</li>
-                    <li>Manmade boards are harder to recycle due to the adhesives in them</li>
-                    <li>Manmade boards tend to be cheaper than natural timbers due to lower quality wood</li>
-                    <li>Manmade boards don't have a grain (except Plywood) which makes them stable in all directions and easier to machine</li>
-                    <li>Manmade boards are more readily available</li>
-                    <li>Manmade boards are made from recycled timber so they are more sustainable</li>
+                    <li><b>Manmade boards</b> are <span class="custom-highlight">not limited by the size</span> of the tree, they can be created in any size, shape or thickness</li>
+                    <li><b>Manmade boards</b> are often covered in a wood veneer for greater strength, durability and for aesthetics</li>
+                    <li><b>Manmade boards</b> are <span class="custom-highlight">harder to recycle</span> due to the adhesives in them</li>
+                    <li><b>Manmade boards</b> tend to be <span class="custom-highlight">cheaper</span> than natural timbers due to lower quality wood</li>
+                    <li><b>Manmade boards</b> don't have a grain (except Plywood) which makes them <span class="custom-highlight">stable</span> in all directions and easier to machine</li>
+                    <li><b>Manmade boards</b> are more <span class="custom-highlight">readily available</span></li>
+                    <li><b>Manmade boards</b> are made from <span class="custom-highlight">recycled timber</span> so they are more sustainable</li>
                 </ul>
 
                 <div class="notes-content-subheader">
