--- a/notes/notes_topics/notes_pages/metals_materials_notes.html
+++ b/notes/notes_topics/notes_pages/metals_materials_notes.html
@@ -90,6 +90,24 @@
                 </div>
 
                 <div class="notes-content-subheader">
+                    <h2><hr>General properties of Ferrous Metals<hr></h2>
+                </div>
+
+                <style>
+                    .custom-highlight {
+                      background-color: rgb(173, 230, 190); /* Change this to the desired color */
+                    }
+                  </style>
+
+                <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Ferrous Metals:</h3>
+                <ul style="font-size: medium;">
+                    <li>As carbon content is increased, <b>ferrous metals</b> become <span class="custom-highlight">more brittle and harder</span></li>
+                    <li><b>Ferrous metals</b> contain <span class="custom-highlight">iron</span> which makes them magnetic</li>
+                    <li><b>Ferrous metals</b> are prone to <span class="custom-highlight">rust and corrosion</span> due to the iron within the metals</li>
+                    <li><b>Ferrous metals</b> tend to be used in construction and as tools due to their good <span class="custom-highlight">mechanical properties</span></li>
+                </ul>
+
+                <div class="notes-content-subheader">
                     <h2><hr>Ferrous Metals<hr></h2>
                 </div>
 
@@ -195,6 +213,23 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Machinery, Cooking pots, Disk brakes, Pipes<br><br><br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>General properties of Non-ferrous Metals<hr></h2>
+                </div>
+
+                <style>
+                    .custom-highlight {
+                      background-color: rgb(173, 230, 190); /* Change this to the desired color */
+                    }
+                  </style>
+
+                <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Non-ferrous Metals:</h3>
+                <ul style="font-size: medium;">
+                    <li><b>Non-ferrous metals</b> are more <span class="custom-highlight"> corrosion resistant</span> than ferrous metals</li>
+                    <li><b>Non-ferrous metals</b> tend to be <span class="custom-highlight">more expensive</span> than ferrous metals due to their rarity</li>
+                    <li><b>Non-ferrous metals</b> tend to be <span class="custom-highlight">lighter</span> than ferrous metals</li>
+                </ul>
 
                 <div class="notes-content-subheader">
                     <h2><hr>Non-ferrous Metals<hr></h2>
