--- a/notes/notes_topics/notes_pages/metals_materials_notes.html
+++ b/notes/notes_topics/notes_pages/metals_materials_notes.html
@@ -111,7 +111,7 @@
                     <h2><hr>Ferrous Metals<hr></h2>
                 </div>
 
-                <h3><b><u>Mild Steel:</b></u></h3>
+                <h3><b><u>Mild Steel (0.05% - 0.30% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -138,7 +138,7 @@
                 </table>
                 <h3><b>Uses: </b>General engineering, Construction, Nuts and Bolts, Pipelines, Machinery parts<br><br><br><br></h3>
 
-                <h3><u><b>Medium Carbon Steel:</b></u></h3>
+                <h3><u><b>Medium Carbon Steel (0.30% - 0.60% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -163,7 +163,7 @@
                 </table>
                 <h3><b>Uses: </b>Garden tools, Springs, Gears, Railroad<br><br><br><br></h3>
 
-                <h3><u><b>High carbon steel:</b></u></h3>
+                <h3><u><b>High carbon steel (0.60% - 1.0% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -188,7 +188,7 @@
                 </table>
                 <h3><b>Uses: </b>Drills, Expensive, Knives<br><br><br><br></h3>
 
-                <h3><u><b>Cast Iron:</b></u></h3>
+                <h3><u><b>Cast Iron  (2.0% - 4.0% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
