--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -90,6 +90,25 @@
                 </div>
 
                 <div class="notes-content-subheader">
+                    <h2><hr>General comparisons of Thermoplastics vs Thermosetting plastics<hr></h2>
+                </div>
+
+                <style>
+                    .custom-highlight {
+                      background-color: rgb(173, 230, 190); /* Change this to the desired color */
+                    }
+                  </style>
+
+                <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Polymers:</h3>
+                <ul style="font-size: medium;">
+                    <li><b>Thermoplastics</b> can be <span class="custom-highlight">reheated and reshaped</span> where as <b>thermosets</b> only burn with heat, this gives them a wide range of appications</li>
+                    <li>Both types of polymer can be recycled but <b>thermoplastics</b> are <span class="custom-highlight">easier to recycle</span></li>
+                    <li><b>Thermosetting polymers</b> are heat resistant and <span class="custom-highlight">more durable</span>, they retain their shape when heated</li>
+                    <li><b>Both</b> types of polymers can be <span class="custom-highlight">easily pigmented</span> (coloured)</li>
+                    <li><b>Thermoplastics</b> are prone to <span class="custom-highlight">UV degradation</span></li>
+                </ul>
+
+                <div class="notes-content-subheader">
                     <h2><hr>Thermoplastics<hr></h2>
                 </div>
 
