--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -107,6 +107,7 @@
                     <li><b>Both</b> types of polymers can be <span class="custom-highlight">easily pigmented</span> (coloured)</li>
                     <li><b>Thermoplastics</b> are prone to <span class="custom-highlight">UV degradation</span></li>
                     <li><b>Both</b> polymers are <span class="custom-highlight">heat and eletrical insulators</span></li>
+                    <li><b>Both</b> polymers are <span class="custom-highlight">hygenic, easily cleaned and waterproof</span></li>
                 </ul>
 
                 <div class="notes-content-subheader">
