--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -93,6 +93,11 @@
 
                 <h3><b><u>Sand casting:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/sandcasting.png" alt="Diagram of shape dimensions">
+                    </div>
+
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Make a mould in the sand using to half moulds (cope and drag) making sure the corners are rounded/tapered</li>
