--- a/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
+++ b/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
@@ -86,6 +86,7 @@
                         <li>Drawing papers</li>
                         <li>Commerical printing papers</li>
                         <li>Boards</li>
+                        <li>How papers/boards are made</li>
                     </ul>
                 </div>
 
@@ -375,6 +376,34 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Food packaging, takeaway food, keeping food warm<br><br><br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>How papers/boards are made<hr></h2>
+                </div>
+
+                <style>
+                    .custom-highlight {
+                      background-color: rgb(173, 230, 190); /* Change this to the desired color */
+                    }
+                  </style>
+
+                <ol>
+                    <li>Trees are cut down and <span class="custom-highlight">debarked</span></li>
+                    <li>The debarked trees are then <span class="custom-highlight">cut and pulped</span></li>
+                    <li>The pulp is then mixed with chemicals to <span class="custom-highlight">extract cellulos fibres</span></li>
+                    <li>The pulp is <span class="custom-highlight">filtered, squeezed and pounded</span> and other materials (chalk, chemicals) are added to change <span class="custom-highlight">opacity and absorbency</span></li>
+                    <li>The excess water and chemicals are <span class="custom-highlight">drained</span> through rollers called calenders</li>
+                    <li>The process is repeated until the pulp is fully dried, after this it is <span class="custom-highlight">pressed</span> to get a smooth finish</li>
+                </ol>
+
+
+
+
+
+
+
+
+
             </div>
         </div>
 
