--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -81,26 +81,49 @@
 
             <div class="notes-content">
 
-                <!-- <div class="notes-content-intro">
+                <div class="notes-content-intro">
                     <h2>The following page of notes will cover:</h2>
                     <ul style="font-size: medium;">
-                        <li>Conductivity</li>
-                        <li>Strength</li>
-                        <li>Conductivity</li>
-                        <li>Conductivity</li>
-                        <li>Conductivity</li>
-                        <li>Conductivity</li>
-                        <li>Conductivity</li>
+                        <li>Physical characteristics (Physical properties)</li>
+                        <li>Mechanical characteristics (Mechanical properties)</li>
                     </ul>
-                </div> -->
+                </div>
 
-                <h3><b><u>Conductivity:</b></u></h3>
+                <div class="notes-content-subheader">
+                    <h2><hr>Physical characteristics<hr></h2>
+                </div>
+
+                <h3><b><u>Electrical conductivity:</b></u></h3>
                 <h3>The Property that lets <b style="color: rgb(185, 22, 22)">electrical current flow</b> through a material<br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Strength:</b></u></h3>
+                <h3><b><u>Thermal conductivity:</b></u></h3>
+                <h3>The Property that lets <b style="color: rgb(185, 22, 22)">thermal energy flow</b> through a material<br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3><b><u>Biodegradability:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">break down over time</b> as a result of <b style="color: rgb(185, 22, 22)">biological activity</b> (being broken down by <b style="color: rgb(185, 22, 22)">microorganisms</b>)<br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3><b><u>Chemical resistance:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand chemical attack</b> <b style="color: rgb(185, 22, 22)"></b> without being broken down<br></h3><br><br/>
+                
+
+                <h3><b><u>Corrosion resistance:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand rusting from water</b> <b style="color: rgb(185, 22, 22)"></b> without being broken down<br></h3>
+                
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Mechanical characteristics<hr></h2>
+                </div>
+
+                <h3><b><u>Strength (Tensile, Compressive, Torsional, Shear, Bending):</b></u></h3>
                 <h3>The ability allowing a material to <b style="color: rgb(185, 22, 22)">resist forces</b> from all directions <b style="color: rgb(185, 22, 22)">(compressive, tensile, bending, shear, torsional).</b> <br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_strength.png" alt="Diagram of shape dimensions">
