--- a/notes/notes_topics/notes_pages/alloying_notes.html
+++ b/notes/notes_topics/notes_pages/alloying_notes.html
@@ -120,6 +120,14 @@
                     </tr>
                 </table>
 
+                <h3><b><u>Examples of Alloys:</b></u></h3>
+                <h3>
+                    <ul>
+                        <li><b>Steel</b> (all types) - Iron, Carbon</li>
+                        <li><b>Brass</b> - Copper, Zinc</li>
+                        <li><b>Bronze</b> - Copper, Tin</li>
+                        <li><b>Duralumin</b> - Aluminium, Copper</li>
+                    </ul></h3>
                 
                 <!-- <div class="download-page">
                     <h3>Get a copy of this page:
