--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,13 @@
         
         <div class="contact-section">
             <h3>
-                We'd love to hear from you!
+                We'd love to hear from you! Contact us via <a href="mailto:designtechbase@gmail.com">designtechbase@gmail.com</a>
             </h3>
+
+            <h3>
+                Or alternatively fill out the form below and we'll get back to you as soon as we can
+            </h3>
+
             <h3>
                 Please feel free to ask questions, or make any suggestions on what you'd like to see
             </h3>
