--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -91,7 +91,7 @@
 
                     <div class="portfolio-item-wrapper-notes-coursework">
                         <!-- <div class="portfolio-img-background-notes" style="background-image:url(../images/)"></div> -->
-                        <div class="portfolio-img-background-coursework" style="border-top: 2px solid rgb(185, 22, 22); border-bottom: 2px solid #FF4E11;"></div>
+                        <div class="portfolio-img-background-coursework" style="background-color: rgb(185, 22, 22, 0.5);"></div>
                         <!-- border-top: 2px solid rgb(185, 22, 22); -->
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
@@ -101,7 +101,7 @@
                     </div>
 
                     <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="border-bottom: 2px solid #FFA700;"></div>
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(22, 125, 185, 0.5);"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
                                 <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 2 Specification.pdf">Part 2: Specification</a>
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="border-bottom: 2px solid #FFF400;"></div>
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(55, 148, 48, 0.5);"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
                                 <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 3 Design Ideas.pdf">Part 3: Design Ideas</a>
@@ -119,7 +119,7 @@
                     </div>
 
                     <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="border-bottom: 2px solid #A3FF00;"></div>
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(155, 108, 213, 0.5);"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
                                 <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 4 Development and Final Idea.pdf">Part 4: Development and Final Design</a>
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="border-bottom: 2px solid #2CBA00;"></div>
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(54, 178, 206, 0.5);"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
                                 <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 5 Evaluation.pdf">Part 5: Evaluation</a>
