--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h3>Boost your grades and achieve your academic goals with <b>DesignandTechbase.</b></h3> 
                     <h3>Start your revision with us today!</h3>
             </div>
-            <h2><hr>What DTBase provides</h2><hr/>   
+            <h2><hr>What DTBase provides</h2>
             <div class="provideindex">
 
                 <div class = "provideindex_text">
