--- a/notes/notes_topics/notes_pages/modern_materials_notes.html
+++ b/notes/notes_topics/notes_pages/modern_materials_notes.html
@@ -83,6 +83,10 @@
                 <div class="notes-content-intro">
                 </div>
 
+                <div class="notes-content-subheader">
+                    <h2><hr>Modern material: a material that has been engineered to have improved properties<hr></h2>
+                </div>
+
 
                 <h3><b><u>Thermo-ceramics:</b></u></h3>
                 <table>
