--- a/notes/notes_topics/notes_pages/CAD_notes.html
+++ b/notes/notes_topics/notes_pages/CAD_notes.html
@@ -199,6 +199,17 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Models, CGI</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
+                <h3><b>Finite Element Analysis (FEA):</b> FEA is a computer run numerical method used to predict how an object/structure will behave under given conditions (e.g. loads and stresses). It can be used to find weak spots in designs and points of failure.</h3>
+                <h3><b>Computational fluid dynamics (CFD):</b> CFD is a computer run numerical method used to study how steady and unsteady fluids (e.g. Gas and Liquids) flow over objects. It is often used for aerodynamic study.</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
             </div>
         </div>
 
