--- a/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
+++ b/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
@@ -76,7 +76,7 @@
 
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(../../../images/ergonomics.jpg)" title="alloy background">
-                <h1 style="color:white"><u><b>Influence on design of anthropometrics and ergonomics</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>Influence on design of anthropometrics and ergonomics</b></u></h1>
             </div>
 
             <div class="notes-content">
@@ -92,6 +92,11 @@
                         <li>Anthropometric data will vary for different ages and parts of the world</li>
                         <li>Can be gathered by designers for certain genders/groups</li>
                     </ul></h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/bellcurve.png" alt="Diagram of shape dimensions">
+                    </div>
+
                     <h3><b>Uses for anthropometric data: </b>TV remote, PS4 controller</h3>
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
