--- a/notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
+++ b/notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
@@ -135,6 +135,10 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
+
+                <div class="notes-content-picture" >
+                    <img src="../../../images/productlifecycle-2.png" alt="Diagram of shape dimensions">
+                </div>
                 
 
  
