--- a/notes/notes_topics/notes_pages/methods_of_production_notes.html
+++ b/notes/notes_topics/notes_pages/methods_of_production_notes.html
@@ -90,6 +90,68 @@
                     </ul>
                 </div>
 
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
+                <h3><b><u>Comparison table:</b></u></h3>
+
+                <table>
+                    <tr class="notes-table-header-maths">
+                        <th></th>
+                        <th>One-off production</th>
+                        <th>Batch production</th>
+                        <th>Mass production</th>
+                        <th>Continuous production</th>
+                    </tr>
+                    <tr class="notes-table-odd">
+                        <td class="notes-table-math-one"><b>Set-up cost</b></td>
+                        <td class="notes-table-math-two">Lowest</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">Highest</td>
+                    </tr>
+                    <tr class="notes-table-even">
+                        <td class="notes-table-math-one"><b>Unit cost</b></td>
+                        <td class="notes-table-math-two">Highest</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">Lowest</td>
+                    </tr>
+                    <tr class="notes-table-odd">
+                        <td class="notes-table-math-one"><b>Labour intensity</b></td>
+                        <td class="notes-table-math-two">Highest</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">Lowest</td>
+                    </tr>
+                    <tr class="notes-table-even">
+                        <td class="notes-table-math-one"><b>Flexible</b></td>
+                        <td class="notes-table-math-two">Yes</td>
+                        <td class="notes-table-math-three">Somewhat</td>
+                        <td class="notes-table-math-three">No</td>
+                        <td class="notes-table-math-three">No</td>
+                    </tr>
+                    <tr class="notes-table-odd">
+                        <td class="notes-table-math-one"><b>Bulk buying</b></td>
+                        <td class="notes-table-math-two">No</td>
+                        <td class="notes-table-math-three">Yes</td>
+                        <td class="notes-table-math-three">Yes</td>
+                        <td class="notes-table-math-three">Yes</td>
+                    </tr>
+                    <tr class="notes-table-even">
+                        <td class="notes-table-math-one"><b>Speed of production</b></td>
+                        <td class="notes-table-math-two">Slowest</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">Highest</td>
+                    </tr>
+                </table>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
                 <h3><b><u>One-off production:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -114,7 +176,11 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Bespoke furniture<br><br><br><br></h3>
+                <h3><b>Uses: </b>Bespoke furniture</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Batch production:</b></u></h3>
                 <table>
@@ -140,7 +206,11 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Food, bakery items<br><br><br><br></h3>
+                <h3><b>Uses: </b>Food, bakery items</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Mass production:</b></u></h3>
                 <table>
@@ -167,7 +237,11 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Electronic products, cars<br><br><br><br></h3>
+                <h3><b>Uses: </b>Electronic products, cars</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Continuous production:</b></u></h3>
                 <table>
@@ -191,7 +265,11 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Cans for drinks industry (330ml, 440ml etc)<br><br><br><br></h3>
+                <h3><b>Uses: </b>Cans for drinks industry (330ml, 440ml etc)</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 
 
