--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                 </div>
 
                 <div class="nav-link-wrapper">
+                    <a href="pastpapers/pastpapers.html">Past Papers</a>
+                </div>
+
+                <div class="nav-link-wrapper">
                     <a href="coursework/coursework.html">Coursework</a>
                 </div>
 
