--- a/pastpapers.html
+++ b/pastpapers.html
@@ -62,7 +62,7 @@
                 </div>
 
                 div class="nav-link-wrapper">
-                    <a href="pastpapers/pastpapers.html">Past Papers</a>
+                    <a href="coursework/coursework.html">Coursework</a>
                 </div>
 
                 <div class="nav-link-wrapper">
@@ -99,7 +99,7 @@
                         <h3> Sign up today!</h3>
                     </div>
                         <div class="contactmebtn">
-                            <a href="pastpapers.html">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </div>
                     </div> 
                 </div> 
